#ifndef STREAM_HPP
#define STREAM_HPP

class Stream {};

#endif  // !STREAM_HPP
